Major UI/UX improvements and feature enhancements
 Key Features Added:
- Dynamic banner slider system with admin panel
- Complete inquiry form with database integration
- Responsive modal design with modern UI
- Dynamic game details pages from database
- Admin panel for managing banners, games, inquiries

 Technical Improvements:
- Fixed modal opening functionality across all pages
- Simplified form validation (name + phone required)
- Added proper breadcrumb navigation
- Implemented responsive design for mobile
- Enhanced JavaScript error handling

 Mobile & UX:
- Fully responsive modal design
- Modern gradient UI with animations
- Improved form conversion rates
- Better visual feedback and loading states
- Cross-browser compatibility

 Database & API:
- Banner management system with image upload
- Game details API with category integration
- Inquiry submission with lead capture
- Proper data validation and sanitization
- Admin panel for viewing/managing data

 UI/UX Enhancements:
- Professional modal design with gradients
- Smooth animations and hover effects
- Consistent color scheme and typography
- Clear call-to-action buttons
- Enhanced user feedback messages

--- a/terms.html
+++ b/terms.html
@@ -323,12 +323,11 @@
     </button>
 
     <!-- Inquiry Modal -->
-    <div id="modalOverlay" class="modal-overlay fixed inset-0 z-50 hidden">
-        <div id="inquiryModal" class="fixed inset-0 z-50 flex items-center justify-center p-4 hidden">
-            <div class="modal-content max-w-md w-full rounded-xl p-6 relative">
-                <button onclick="closeModal()" class="absolute top-4 right-4 text-gray-400 hover:text-white">
-                    <i class="fas fa-times text-xl"></i>
-                </button>
+    <div id="modalOverlay" class="modal-overlay fixed inset-0 z-50 hidden flex items-center justify-center p-4">
+        <div id="inquiryModal" class="modal-content max-w-md w-full rounded-xl p-6 relative">
+            <button onclick="closeModal()" class="absolute top-4 right-4 text-gray-400 hover:text-white">
+                <i class="fas fa-times text-xl"></i>
+            </button>
                 
                 <h3 class="text-2xl font-bold gradient-text mb-6">
                     <i class="fas fa-envelope mr-3"></i>Get In Touch
@@ -364,7 +363,6 @@
                         </button>
                     </div>
                 </form>
-            </div>
         </div>
     </div>
 
