Improve mobile responsiveness for contact page and navigation
- Enhanced contact page mobile layout with better spacing and touch targets
- Optimized contact form for mobile devices with single-column layout
- Improved floating button positioning to prevent mobile overlap
- Added responsive padding and sizing throughout contact page
- Maintained consistent responsive navigation across all pages

--- a/terms.html
+++ b/terms.html
@@ -52,17 +52,17 @@
             <div class="flex items-center justify-between h-16">
                 <!-- Logo -->
                 <div class="flex items-center">
-                    <a href="index.html" id="navbar-logo" class="text-2xl font-bold gradient-text flex items-center">
+                    <a href="/" id="navbar-logo" class="text-2xl font-bold gradient-text flex items-center">
                         <i class="fas fa-gamepad mr-2"></i><span id="site-name">GameHub</span>
                     </a>
                 </div>
 
                 <!-- Action Buttons -->
                 <div class="hidden md:flex items-center space-x-4">
-                    <a href="platforms.html" class="text-gray-700 hover:text-blue-600 transition-colors font-semibold px-4 py-2 rounded-lg hover:bg-blue-50">
+                    <a href="platforms" class="text-gray-700 hover:text-blue-600 transition-colors font-semibold px-4 py-2 rounded-lg hover:bg-blue-50">
                         <i class="fas fa-server mr-2"></i>Platforms
                     </a>
-                    <a href="contact.html" class="text-gray-700 hover:text-blue-600 transition-colors font-semibold px-4 py-2 rounded-lg hover:bg-blue-50">
+                    <a href="contact" class="text-gray-700 hover:text-blue-600 transition-colors font-semibold px-4 py-2 rounded-lg hover:bg-blue-50">
                         <i class="fas fa-phone mr-2"></i>Contact Us
                     </a>
                     <button onclick="openModal()" class="btn-primary px-6 py-2 rounded-lg font-semibold text-white">
@@ -72,10 +72,10 @@
 
                 <!-- Mobile Buttons -->
                 <div class="md:hidden flex items-center space-x-2">
-                    <a href="platforms.html" class="text-gray-700 hover:text-blue-600 transition-colors p-2 rounded-lg hover:bg-blue-50">
+                    <a href="platforms" class="text-gray-700 hover:text-blue-600 transition-colors p-2 rounded-lg hover:bg-blue-50">
                         <i class="fas fa-server text-lg"></i>
                     </a>
-                    <a href="contact.html" class="text-gray-700 hover:text-blue-600 transition-colors p-2 rounded-lg hover:bg-blue-50">
+                    <a href="contact" class="text-gray-700 hover:text-blue-600 transition-colors p-2 rounded-lg hover:bg-blue-50">
                         <i class="fas fa-phone text-lg"></i>
                     </a>
                     <button onclick="openModal()" class="btn-primary px-4 py-2 rounded-lg font-semibold text-white">
@@ -92,7 +92,7 @@
             <!-- Breadcrumb -->
             <div class="mb-6" data-aos="fade-up">
                 <nav class="flex items-center space-x-2 text-gray-400">
-                    <a href="index.html" class="hover:text-blue-400 transition-colors">
+                    <a href="/" class="hover:text-blue-400 transition-colors">
                         <i class="fas fa-home mr-1"></i>Home
                     </a>
                     <i class="fas fa-chevron-right text-sm"></i>
@@ -281,10 +281,10 @@
                     <div class="mt-12 pt-8 border-t border-gray-700">
                         <h3 class="text-xl font-semibold text-white mb-4">Related Documents</h3>
                         <div class="flex flex-wrap gap-4">
-                            <a href="privacy.html" class="btn-primary px-6 py-3 rounded-lg font-semibold text-white">
+                            <a href="privacy" class="btn-primary px-6 py-3 rounded-lg font-semibold text-white">
                                 <i class="fas fa-shield-alt mr-2"></i>Privacy Policy
                             </a>
-                            <a href="index.html#contact" class="btn-secondary px-6 py-3 rounded-lg font-semibold text-white">
+                            <a href="/#contact" class="btn-secondary px-6 py-3 rounded-lg font-semibold text-white">
                                 <i class="fas fa-envelope mr-2"></i>Contact Us
                             </a>
                             <button onclick="openModal()" class="bg-slate-700 hover:bg-slate-600 px-6 py-3 rounded-lg font-semibold text-white transition-colors">
