--- a/platforms.html
+++ b/platforms.html
@@ -122,7 +122,7 @@
             <div class="flex items-center justify-between h-16">
                 <!-- Logo -->
                 <div class="flex items-center">
-                    <a href="index.html" id="navbar-logo" class="text-2xl font-bold gradient-text flex items-center">
+                    <a href="/" id="navbar-logo" class="text-2xl font-bold gradient-text flex items-center">
                         <i class="fas fa-gamepad mr-2"></i><span id="site-name">GameHub</span>
                     </a>
                 </div>
@@ -132,7 +132,7 @@
                     <span class="text-blue-600 font-bold px-4 py-2 rounded-lg bg-blue-50">
                         <i class="fas fa-server mr-2"></i>Platforms
                     </span>
-                    <a href="contact.html" class="text-gray-700 hover:text-blue-600 transition-colors font-semibold px-4 py-2 rounded-lg hover:bg-blue-50">
+                    <a href="contact" class="text-gray-700 hover:text-blue-600 transition-colors font-semibold px-4 py-2 rounded-lg hover:bg-blue-50">
                         <i class="fas fa-phone mr-2"></i>Contact Us
                     </a>
                     <button onclick="openModal()" class="btn-primary px-6 py-2 rounded-lg font-semibold text-white">
@@ -145,7 +145,7 @@
                     <span class="text-blue-600 font-bold p-2 rounded-lg bg-blue-50">
                         <i class="fas fa-server text-lg"></i>
                     </span>
-                    <a href="contact.html" class="text-gray-700 hover:text-blue-600 transition-colors p-2 rounded-lg hover:bg-blue-50">
+                    <a href="contact" class="text-gray-700 hover:text-blue-600 transition-colors p-2 rounded-lg hover:bg-blue-50">
                         <i class="fas fa-phone text-lg"></i>
                     </a>
                     <button onclick="openModal()" class="btn-primary px-4 py-2 rounded-lg font-semibold text-white">
@@ -290,7 +290,7 @@
                     <button onclick="openModal()" class="bg-white text-blue-600 px-8 py-4 rounded-xl text-lg font-bold hover:bg-gray-100 transition-colors shadow-lg">
                         <i class="fas fa-play mr-2"></i>Get Started Now
                     </button>
-                    <a href="contact.html" class="border-2 border-white text-white px-8 py-4 rounded-xl text-lg font-bold hover:bg-white hover:text-blue-600 transition-colors">
+                    <a href="contact" class="border-2 border-white text-white px-8 py-4 rounded-xl text-lg font-bold hover:bg-white hover:text-blue-600 transition-colors">
                         <i class="fas fa-phone mr-2"></i>Contact Support
                     </a>
                 </div>
@@ -331,11 +331,11 @@
                 <div>
                     <h4 class="text-lg font-semibold text-white mb-4">Quick Links</h4>
                     <ul class="space-y-2">
-                        <li><a href="index.html" class="text-gray-400 hover:text-blue-400 transition-colors">Home</a></li>
-                        <li><a href="platforms.html" class="text-blue-400 font-semibold">Platforms</a></li>
-                        <li><a href="contact.html" class="text-gray-400 hover:text-blue-400 transition-colors">Contact Us</a></li>
-                        <li><a href="terms.html" class="text-gray-400 hover:text-blue-400 transition-colors">Terms & Conditions</a></li>
-                        <li><a href="privacy.html" class="text-gray-400 hover:text-blue-400 transition-colors">Privacy Policy</a></li>
+                        <li><a href="/" class="text-gray-400 hover:text-blue-400 transition-colors">Home</a></li>
+                        <li><a href="platforms" class="text-blue-400 font-semibold">Platforms</a></li>
+                        <li><a href="contact" class="text-gray-400 hover:text-blue-400 transition-colors">Contact Us</a></li>
+                        <li><a href="terms" class="text-gray-400 hover:text-blue-400 transition-colors">Terms & Conditions</a></li>
+                        <li><a href="privacy" class="text-gray-400 hover:text-blue-400 transition-colors">Privacy Policy</a></li>
                     </ul>
                 </div>
 
@@ -375,8 +375,8 @@
     <!-- Inquiry Modal -->
     <div id="inquiryModal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 p-4">
         <div class="bg-white rounded-2xl max-w-3xl w-full max-h-screen overflow-y-auto animate-pulse-scale">
-            <div class="p-8">
-                <div class="flex justify-between items-center mb-6">
+            <div class="p-8 rounded-t-3xl md:rounded-t-none">
+                <div class="flex justify-between items-center mb-6 hidden md:flex">
                     <h2 class="text-3xl font-bold text-gray-800">Quick Inquiry</h2>
                     <button onclick="closeModal()" class="text-gray-500 hover:text-gray-700 text-2xl">
                         <i class="fas fa-times"></i>
