--- a/contact.html
+++ b/contact.html
@@ -115,9 +115,9 @@
                     <span class="text-blue-600 font-bold px-4 py-2 rounded-lg bg-blue-50">
                         <i class="fas fa-phone mr-2"></i>Contact Us
                     </span>
-                    <button onclick="openModal()" class="btn-primary px-6 py-2 rounded-lg font-semibold text-white">
-                        <i class="fas fa-envelope mr-2"></i>Enquiry
-                    </button>
+                    <a id="navbar-whatsapp-desktop" href="#" target="_blank" class="bg-green-500 hover:bg-green-600 px-6 py-2 rounded-lg font-semibold text-white flex items-center">
+                        <i class="fab fa-whatsapp mr-2"></i>WhatsApp
+                    </a>
                 </div>
 
                 <!-- Mobile Buttons -->
@@ -128,9 +128,9 @@
                     <span class="text-blue-600 font-bold p-2 rounded-lg bg-blue-50">
                         <i class="fas fa-phone text-lg"></i>
                     </span>
-                    <button onclick="openModal()" class="btn-primary px-4 py-2 rounded-lg font-semibold text-white">
-                        <i class="fas fa-envelope mr-2"></i>Enquiry
-                    </button>
+                    <a id="navbar-whatsapp-mobile" href="#" target="_blank" class="bg-green-500 hover:bg-green-600 px-4 py-2 rounded-lg font-semibold text-white flex items-center">
+                        <i class="fab fa-whatsapp mr-2"></i>WhatsApp
+                    </a>
                 </div>
             </div>
         </div>
