--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
                     <a href="contact" class="text-gray-700 hover:text-blue-600 transition-colors font-semibold px-4 py-2 rounded-lg hover:bg-blue-50">
                         <i class="fas fa-phone mr-2"></i>Contact Us
                     </a>
-                    <button onclick="openModal()" class="btn-primary px-6 py-2 rounded-lg font-semibold text-white">
-                        <i class="fas fa-envelope mr-2"></i>Enquiry
-                    </button>
+                    <a id="navbar-whatsapp-desktop" href="#" target="_blank" class="bg-green-500 hover:bg-green-600 px-6 py-2 rounded-lg font-semibold text-white flex items-center">
+                        <i class="fab fa-whatsapp mr-2"></i>WhatsApp
+                    </a>
                 </div>
 
                 <!-- Mobile Buttons -->
@@ -165,9 +165,9 @@
                     <a href="contact" class="text-gray-700 hover:text-blue-600 transition-colors p-2 rounded-lg hover:bg-blue-50">
                         <i class="fas fa-phone text-lg"></i>
                     </a>
-                    <button onclick="openModal()" class="btn-primary px-4 py-2 rounded-lg font-semibold text-white">
-                        <i class="fas fa-envelope mr-2"></i>Enquiry
-                    </button>
+                    <a id="navbar-whatsapp-mobile" href="#" target="_blank" class="bg-green-500 hover:bg-green-600 px-4 py-2 rounded-lg font-semibold text-white flex items-center">
+                        <i class="fab fa-whatsapp mr-2"></i>WhatsApp
+                    </a>
                 </div>
             </div>
         </div>
